<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">




<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/image_icon"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150sp"-->
<!--            app:lottie_autoPlay="true"-->
<!--            android:layout_centerInParent="true"-->
<!--            app:lottie_fileName="earth.json"-->
<!--            app:lottie_loop="true"-->
<!--            tools:ignore="DuplicateIds" />-->
        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_login_24">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/log_into_nyour_account"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorTheme"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:hintTextColor="@color/colorWhite">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine"
                android:paddingBottom="@dimen/_15sdp"
                android:id="@+id/un_edit_text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColorHint="@color/colorWhite"
            app:hintTextColor="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/password"
                android:id="@+id/pass_edit_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                android:text="@string/remember_me"
                android:layout_gravity="center"
                android:gravity="start|center_vertical"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end|center_vertical"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/forget"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_background_dark"
            android:elevation="4dp"
            android:letterSpacing=".1"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSignUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/button_background_light"
            android:elevation="4dp"
            android:letterSpacing=".1"
            android:text="@string/sign_up_non_underline"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />

    </LinearLayout>


</RelativeLayout>