<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:layout_height="fill_parent">








    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/earthjson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="earth.json"
        app:lottie_loop="true" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/kidsjson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="children.json"
        app:lottie_loop="true" />
    <TextView
        android:id="@+id/app_name"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/earthjson"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="app name comes here"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/lgb"
        android:textSize="23dp"  />


    <TextView
        android:id="@+id/govt_textv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/govt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23dp"
        android:layout_marginBottom="100dp"  />
    <TextView
        android:id="@+id/dept_textv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dept"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"

        android:layout_marginBottom="70dp" />
    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/address"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12dp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp" />
    <TextView
        android:id="@+id/web_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/web_address"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="12dp"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
