<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/kidsavesearthresized">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">



                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/image_icon"
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    app:lottie_autoPlay="true"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    app:lottie_fileName="signup.json"
                    app:lottie_loop="true"
                    tools:ignore="DuplicateIds" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/create_nyour_account"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="First name"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="Last name"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Create a TextInputLayout and choose the style,
        for now we are choosing the OutlinedBox ExposedDropdownMenu   -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

                android:theme="@style/Theme.MaterialComponents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/colorWhite"
                android:importantForAutofill="no"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <!-- Inside text input layout add
                      an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textImeMultiLine"
                    android:text="Country"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_20sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingBottom="@dimen/_20sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:hintTextColor="@color/colorWhite">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_20sdp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                android:text="@string/by_signing_i_agree_to_the_terms_and_policy"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/button_background_dark"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tvSignUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_background_light"
                android:elevation="4dp"
                android:text="@string/login"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
